Improve Website Responsiveness and Navigation
-   Implement responsive design for various devices (laptops, tablets, iPads, phones)
-   Add a hamburger menu button for phone screens
-   Fix broken navigation links and Get-Started links
-   Add Scroll-To-Top button and implement smooth scrolling
-   Update marketing section image to be responsive to section height

--- a/css/section-marketing.css
+++ b/css/section-marketing.css
@@ -1,3 +1,19 @@
+.section-marketing .section-content{
+  overflow: hidden;
+}
+
+.img-box{
+  flex: 1;
+  align-self: flex-start;
+  position: relative;
+}
+
+.img-box .section-img{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  transform: translate(0, -10%);
+}
 
 .features-list{
   list-style: none;
