--- a/css/header.css
+++ b/css/header.css
@@ -19,6 +19,20 @@
   cursor: pointer;
 }
 
+.icon-mobile-nav {
+  display: none;
+  width: 6rem;
+  height: 6rem;
+  color: #333;
+}
+
+.btn-mobile-nav{
+  display: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 /*************************/
 /* Navigation Components */
 /*************************/
@@ -51,11 +65,16 @@
   padding: 1.2rem 2.4rem;
   border-radius: 20px;
   background-color: #ff3f66;
+}
 
+.header-cta{
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
   position: absolute;
-  right: 10%;
+  right: 5%;
   bottom: 50%;
-  transform: translate(50%, 50%);
+  transform: translateY(50%);
 }
 
 .main-nav-link.nav-cta-link:hover,
