--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth
 }
 
 body {
@@ -13,4 +14,29 @@ body {
   /* font-family: sans-serif; */
   font-size: 1.6rem;
   font-weight: 400;
+}
+
+.btn-scroll-to-top{
+  display: none;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  font-size: 1.8rem;
+  background-color: #fff;
+  color: #e6415f;
+  border: 3px solid #eee;
+  border-radius: 12px;
+  padding: 2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  z-index: 100;
+}
+
+.btn-scroll-to-top:hover{
+  color: #fff;
+  background-color: #e6415f;
+}
+
+.btn-scroll-to-top.show{
+  display: block;
 }
