--- a/css/reusable.css
+++ b/css/reusable.css
@@ -49,7 +49,7 @@ default: 9px
 header components: 7rem
 nav-links: 3.2rem
 nav-down-arrows & links: 0.5rem
-haro-img-text: 10rem
+hero-img-text: 10rem
 */
 
 /*******************************/
@@ -172,6 +172,7 @@ haro-img-text: 10rem
   font-size: 4.4rem;
   font-weight: 800;
   margin-bottom: 1rem;
+  line-height: 1.05;
 }
 
 .medium-title {
