--- a/css/section-download-page.css
+++ b/css/section-download-page.css
@@ -1,18 +1,19 @@
-.section-download-page{
+.section-download-page {
   padding: 8rem 0;
 }
 
-.justify-text{
+.justify-text {
   max-width: 50rem;
   /* text-align: justify; */
 }
 
-.download-btns{
+.download-btns {
   display: flex;
   gap: 1.6rem;
+  flex-wrap: wrap;
 }
 
-.download-btn{
+.download-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,42 +21,42 @@
 
   color: #121433;
   background-color: #fff;
-  
+
   font-size: 1.6rem;
   font-weight: 600;
   line-height: 1;
-  padding: 1rem 2.0rem;
+  padding: 1rem 2rem;
   border: 3px solid #121433;
   border-radius: 15px;
   transition: all 0.3s;
   cursor: pointer;
 }
 
-.download-btn span{
+.download-btn span {
   display: block;
   font-size: 2.8rem;
   font-weight: 600;
   text-align: start;
 }
 
-.download-btn.apple-btn{
+.download-btn.apple-btn {
   color: #fff;
   background-color: #121433;
 }
 
-.store-logo{
+.store-logo {
   width: 4.8rem;
   height: 4.8rem;
   margin-right: 1rem;
 }
 
-.apple-btn:hover{
+.apple-btn:hover {
   /* color: #121433; */
   background-color: #000;
   box-shadow: 0 0 10px #121433;
 }
 
-.playstore-btn:hover{
+.playstore-btn:hover {
   color: #fff;
   background-color: #121433;
   box-shadow: 0 0 10px #121433;
