--- a/css/section-gallery.css
+++ b/css/section-gallery.css
@@ -49,7 +49,7 @@
 }
 
 .video-thumbnail{
-  max-width: 100%;
+  width: 100%;
   flex: 1;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .video-btn.ctl-btn{
-  width: auto;
+  width: max-content;
   height: auto;
   border-radius: 30px;
   padding: 1.6rem 3.2rem;
