--- a/css/section-hero.css
+++ b/css/section-hero.css
@@ -23,7 +23,7 @@
   justify-content: space-between;
   /* gap: 2rem; */
 
-  width: 40rem;
+  width: 90%;
   padding: 2.0rem 1.8rem;
   font-size: 1.6rem;
   color: #555;
@@ -39,6 +39,12 @@
 .mail-box:hover{
   box-shadow: 0 0 3px #ff3f66;
   background-color: #eef1f6;
+}
+
+.mail-box span{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .mail-box .primary-color{
