--- a/css/section-testimonial.css
+++ b/css/section-testimonial.css
@@ -1,5 +1,4 @@
-.testimonial-card{
-
+.testimonial-card {
   /* display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr); */
@@ -11,11 +10,11 @@
   border-radius: 8px;
   border: 2px solid #eee;
   transition: all 0.3s;
-  background-image: url(/imgs/testimonial-bg.jpg);
+  background-image: url(/imgs/testimonial-bg.webp);
   padding: 14.2rem 16.6rem;
 }
 
-.testimonial-card__img-content{
+.testimonial-card__img-content {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,7 +22,7 @@
   gap: 0.5rem;
 }
 
-.stars-list{
+.stars-list {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,63 +31,59 @@
   list-style: none;
 }
 
-.star-icon{
+.star-icon {
   color: #fdb749;
   font-size: 1.8rem;
 }
 
-
-.testimonial-card__img{
+.testimonial-card__img {
   width: 16rem;
   height: 16rem;
   object-fit: cover;
   border-radius: 50%;
-  overflow: visible;
   margin-bottom: 1rem;
 }
 
-.testimonial-card__text{
+.testimonial-card__text {
   color: #fff;
   font-weight: 500;
-  font-size: 1.8rem ;
+  font-size: 1.8rem;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 
-.testimonial-card__text--description{
+.testimonial-card__text--description {
   margin-bottom: 2rem;
   font-size: 2.2rem;
   font-weight: 400;
   line-height: 1.6;
 }
 
-.testimonial-card__text .space-between{
+.testimonial-card__text .space-between {
   margin: 0;
 }
 
-.testimonial-card__text--name{
+.testimonial-card__text--name {
   font-weight: 600;
   font-size: 2.4rem;
 }
 
 .testimonial-card__text--job,
-.review{
+.review {
   font-size: 1.6rem;
   font-weight: 500;
   color: #eeeeeec4;
 }
 
-.testimonial-btns{
+.testimonial-btns {
   display: flex;
   align-items: center;
   gap: 2rem;
 }
 
-.testimonial-btns .video-btn{
-  
+.testimonial-btns .video-btn {
   width: 4.8rem;
   height: 4.8rem;
   border-radius: 50%;
@@ -99,7 +94,7 @@
   transition: all 0.3s;
 }
 
-.testimonial-btns .video-btn:hover{
+.testimonial-btns .video-btn:hover {
   background-color: #fff;
   color: #333;
 }
